Mapprio/main/default/objects/Campaign/fields/MapprioSmartSurveyDescription__c.field-meta.xml
<CustomField>
    <fullName>MapprioSmartSurveyDescription__c</fullName>
    <label>Mapprio Smart Survey Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>