Mapprio/main/default/objects/Campaign/fields/MapprioSmartSurveyId__c.field-meta.xml
<CustomField>
    <fullName>MapprioSmartSurveyId__c</fullName>
    <externalId>true</externalId>
    <label>Mapprio Smart Survey Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>