Mapprio/main/default/objects/Campaign/fields/MapprioSmartSurveyPreviewURL__c.field-meta.xml
<CustomField>
    <fullName>MapprioSmartSurveyPreviewURL__c</fullName>
    <label>Mapprio Smart Survey Preview URL</label>
    <type>Url</type>
</CustomField>